desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets-img.css
/* ... */
/* Middle button */
toolbar.primary-toolbar .linked button.raised,
toolbar.primary-toolbar .linked button.raised:hover,
toolbar.primary-toolbar .linked button.raised:focus,
toolbar.primary-toolbar .linked button.raised:focus:hover,
toolbar.primary-toolbar .linked button.raised:focus:hover:active,
toolbar.primary-toolbar .raised.linked button,
toolbar.primary-toolbar .raised.linked button:hover,
toolbar.primary-toolbar .raised.linked button:focus,
toolbar.primary-toolbar .raised.linked button:focus:hover,
toolbar.primary-toolbar .raised.linked button:focus:hover:active,
toolbar.primary-toolbar .raised.linked button:disabled {
    border-image-width: 3px 0px 4px 0px;
    border-radius: 0;
    border-width: 1px 0px 1px 0px;
    border-color: @border_color;
    padding: 4px 3px;
}

/* Leftmost button */
toolbar.primary-toolbar .linked button.raised:first-child,
toolbar.primary-toolbar .linked button.raised:hover:first-child,
toolbar.primary-toolbar .linked button.raised:focus:first-child,
toolbar.primary-toolbar .linked button.raised:focus:hover:first-child,
toolbar.primary-toolbar .linked button.raised:focus:hover:active:first-child,
toolbar.primary-toolbar .raised.linked button:first-child,
toolbar.primary-toolbar .raised.linked button:hover:first-child,
toolbar.primary-toolbar .raised.linked button:focus:first-child,
toolbar.primary-toolbar .raised.linked button:focus:hover:first-child,
toolbar.primary-toolbar .raised.linked button:focus:hover:active:first-child,
toolbar.primary-toolbar .raised.linked button:disabled:first-child {
    border-image-width: 3px 0px 4px 3px;
    border-radius: 3px 0 0 3px;
    border-width: 1px 0px 1px 1px;
    border-color: @border_color;
    padding: 4px 3px;
}

/* Rightmost button */
toolbar.primary-toolbar .linked button.raised:last-child,
toolbar.primary-toolbar .linked button.raised:hover:last-child,
toolbar.primary-toolbar .linked button.raised:focus:last-child,
toolbar.primary-toolbar .linked button.raised:focus:hover:last-child,
toolbar.primary-toolbar .linked button.raised:focus:hover:active:last-child,
toolbar.primary-toolbar .raised.linked button:last-child,
toolbar.primary-toolbar .raised.linked button:hover:last-child,
toolbar.primary-toolbar .raised.linked button:focus:last-child,
toolbar.primary-toolbar .raised.linked button:focus:hover:last-child,
toolbar.primary-toolbar .raised.linked button:focus:hover:active:last-child,
toolbar.primary-toolbar .raised.linked button:disabled:last-child {
    border-image-width: 3px 3px 4px 0px;
    border-radius: 0 3px 3px 0;
    border-width: 1px 1px 1px 0px;
    border-color: @border_color;
    padding: 4px 3px;
}

/* generic disabled element borders */
switch:disabled,
combobox entry:disabled,
combobox button:disabled,
entry:disabled,
button:disabled,
trough row {
    border-image: url("img/border-insensitive.svg") 3 3 4 3 / 3px 3px 4px 3px repeat;
    border-radius: 3px;
    border-width: 1px 1px 2px 1px;
    border-style: solid;
    border-color: transparent;
}

menuitem button.flat,
button.flat,
button.flat:disabled,
list row button,
list row button:hover {
    border-image: none;
    background-image: none;
}

/* focused element borders */
entry:focus,
combobox entry:focus,
button.flat:focus:checked,
button:focus:active,
button:focus,
button.default:active,
/* focused button borders */
button.flat:focus,
button.default,
toolbar.primary-toolbar entry:focus,
toolbar.primary-toolbar button:active:focus,
toolbar.primary-toolbar button:focus:hover,
toolbar.primary-toolbar combobox entry:focus,
toolbar.primary-toolbar combobox button:focus,
toolbar.primary-toolbar button.raised:focus:active,
toolbar.primary-toolbar .raised button:focus:active,
toolbar.primary-toolbar button.raised.default:active,
toolbar.primary-toolbar .raised button.default:active,
toolbar.primary-toolbar combobox button:active:focus,
toolbar.primary-toolbar button.raised:focus,
toolbar.primary-toolbar button.raised.default,
toolbar.primary-toolbar .raised button:focus,
toolbar.primary-toolbar .raised button.default,
toolbar.primary-toolbar combobox button:focus,
toolbar.inline-toolbar.horizontal button.text-button:focus,
combobox button.combo:focus,
combobox .linked button.combo:focus {
    border-image: url("img/border-focused.svg") 3 3 4 3 / 3px 3px 4px 3px repeat;
    border-radius: 3px;
    border-width: 1px 1px 2px 1px;
    border-style: solid;
    border-color: @button_default_border_color;
    box-shadow: inset  0px  1px @button_default_box_shadow_color,
                inset  1px  0px @button_default_box_shadow_color,
                inset -1px  0px @button_default_box_shadow_color,
                inset  0px -1px @button_default_box_shadow_color;
}

/* focused primary toolbar button borders */
toolbar.primary-toolbar button:focus {
    border-image: url("img/border-focused-ptb.svg") 3 3 4 3 / 3px 3px 4px 3px repeat;
    border-radius: 3px;
    border-width: 1px 1px 2px 1px;
    border-style: solid;
    border-color: transparent;
}

/* focused switch trough borders */
switch:active {
    border-image: url("img/border-focused-switch.svg") 3 3 4 3 / 3px 3px 4px 3px stretch;
    border-radius: 3px;
    border-width: 1px 1px 2px 1px;
    border-style: solid;
    border-color: transparent;
}

